2003-10-04  Sebastien Pouliot  <spouliot@videotron.ca>

	* ChainStream.cs: New. Allows to chain the WebRequest.GetRequestStream
	so we can modify its content before sending it.
	* Pipeline.cs: Fixed stupid error in ProcessOutputMessage (x++ -> x--)
	* SoapContext.cs: Implemented CopyTo(SoapContext)
	* SoapEnvelope.cs: New internal constructor for SoapContext
	* SoapInputFilterCollection.cs: Fixed Clone() and added an internal
	constructor.
	* SoapOutputFilterCollection.cs: Fixed Clone() and added an internal
	constructor.
	* SoapWebRequest.cs: Completed TODO.
	* WebServicesClientProtocol.cs: Fixed InvalidCast in GetWebResponse. But
	how do we set the ResponseSoapContext ?

2003-09-06  Sebastien Pouliot  <spouliot@videotron.ca>

	* Pipeline.cs: Uncommented Microsoft.Web.Services.Configuration;